--- a/src/app/shared/scoreboards/player-card-roster/player-card-roster.component.html
+++ b/src/app/shared/scoreboards/player-card-roster/player-card-roster.component.html
@@ -3,10 +3,7 @@
   <div class="start-roster-card">
     <div class="start-roster-card-photo">
       <tui-avatar
-        [src]="
-          backendUrl + (player.person?.person_photo_web_url || '')
-            | tuiFallbackSrc: getPlayerInitials(player)
-        "
+        [src]="backendUrl + player.person?.person_photo_web_url"
         size="xxl"
         class="player-roster-card-avatar"
         [round]="false"
