navigate function moved to helper

--- a/src/app/components/player/list-of-players/list-of-players.component.html
+++ b/src/app/components/player/list-of-players/list-of-players.component.html
@@ -8,7 +8,7 @@
           tuiSurface="floating"
           type="button"
           style="width: 100%"
-          (click)="navigateToItem(playerItemHref(p.player))"
+          (click)="navigate(p.player)"
         >
           <tui-avatar
             appearance="primary"
