--- a/src/app/shared/ui/list/list-of-items-island/list-of-items-island.component.html
+++ b/src/app/shared/ui/list/list-of-items-island/list-of-items-island.component.html
@@ -7,7 +7,7 @@
           tuiCell
           tuiSurface="floating"
           type="button"
-          (click)="navigateToItem(formatPath(item))"
+          (click)="navigate(item)"
           style="width: 100%"
         >
           <tui-avatar
