--- a/src/app/components/adv/sponsor-line/sponsor-line.component.html
+++ b/src/app/components/adv/sponsor-line/sponsor-line.component.html
@@ -9,6 +9,7 @@
         [formatPath]="itemHref"
         [titleProperty]="islandTitleProperty"
         [_size]="'l'"
+        [avatarUrl]="'sponsor.logo_url'"
       ></app-list-of-items-island>
     }
   </div>
